--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>library-app</title>
 </head>
 <body>
-    
+
+    <h1>Library app</h1>
+    <button type="submit">Add Book</button>
+
+    <div class="book-container">
+        <div class="card">card1</div>
+        <div class="card">card2</div>
+    </div>
 
     <script src="library-app.js"></script>
 </body>
