--- a/index.html
+++ b/index.html
@@ -12,14 +12,40 @@
     <div class="container">
         <div class="title-container">
             <h1>Library app</h1>
-            <button class="add-button" type="submit">Add Book</button>
+            <button class="add-button">Add Book</button>
+
+            <dialog id="formDialog">
+                <button id="closeDialog" class="close-button" aria-label="Cerrar">&times;</button>
+                <form method="dialog" class="card">
+                    <h2>New Book</h2>
+                    <div class="input-group">
+                        <label for="form-title">Title:</label>
+                        <input type="text" id="form-title" placeholder="The Lord of The Ring" maxlength="50" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="form-author">Author: </label>
+                        <input type="text" id="form-author" placeholder="J.R.R Tolkien" maxlength="50" required>
+                    </div>
+                    <div class="input-group">
+                        <label for="form-pages">Number of pages: </label>
+                        <input type="number" id="form-pages" placeholder="1216" min="1" required>
+                    </div>
+                    <div class="input-group">
+                        <label>
+                            <input type="checkbox" id="form-read">
+                            Read
+                        </label>
+                    </div>
+                    <button id="form-add" type="submit">Add</button>
+                </form>
+            </dialog>
+
         </div>
 
         <div class="book-container">
-            
+
         </div>
     </div>
-
 
     <script src="library-app.js"></script>
 </body>
