--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="input-group">
                         <label for="form-pages">Number of pages: </label>
-                        <input type="number" id="form-pages" placeholder="1216" min="1" required>
+                        <input type="number" id="form-pages" placeholder="1216" min="1" max="9999" required>
                     </div>
                     <div class="input-group">
                         <label>
