--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="input-group">
                         <label>
-                            <input type="checkbox" id="form-read">
+                            <input type="checkbox" id="form-read" checked>
                             Read
                         </label>
                     </div>
